
2024-09-09  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in:  adding testrunner tmux as alternative
	  to screen; allow to override the deduced test runner by environment
	  variable TESTRUNNER; new option to call with parameter "attach" and
	  "kill" for either attaching to or killing test runner sessions in
	  screen/tmux; enhance portability and use abs_builddir
	* run_prog_manual.sh.in (_test_with_screen): use separate SCREENDIR
	  to ensure using system defaults and work around WSL regressions
	* run_prog_manual.sh.in (_test_with_cmd): work around cmd quoting
	  by using a dynamically created sub command file
	* atlocal.in (set_utf8_locale): new function for the testsuite
	  enabling tests to either run with UTF8 locale or skip
	* atlocal.in: use configure-setup for the grep binary
	* atlocal_win: updated to current atlocal.in

2024-08-03  David Declerck <david.declerck@ocamlpro.com>

	* testsuite.src/run_file.at, testsuite.src/run_misc.at:
	  fix a few tests that break under MSVC Debug while working
	  under MSVC Release, by forcing a flush of stdout with
	  fflush and using cob_free instead of free in C codes

2024-06-19  David Declerck <david.declerck@ocamlpro.com>

	* atlocal_win: fix path-related issues in Windows builds

2023-07-10  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal_win: updated to current atlocal.in
	* atlocal.in: include valgrind (memcheck, sgcheck) testing, enabled
	  by specifying VGSUFFIX in the environment
	* atlocal_valgrind: deleted
	* Makefile.am (dist): distributing valgrind.supp (for use in the testsuite)
	* Makefile.am (clean): clean folders created while running the testsuite
	  though various tools

2023-07-04  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* atlocal.in: add variables LISTING_FLAGS, COMPILE_LISTING and
	  COMPILE_LISTING0 to use new flags -fno-ttimestamp and -fttitle
	  to remove the need for UNIFY_LISTING in listings.at

2023-04-05  Simon Sobisch <simonsobisch@gnu.org>
