@@ -185,6 +185,7 @@ _unset_option () {
 	     -a "$1" != "COB_COPY_DIR" \
 	     -a "$1" != "COB_RUNTIME_CONFIG" \
 	     -a "$1" != "COB_LIBRARY_PATH" \
+	     -a "$1" != "COB_CC" \
 	     -a "$1" != "COB_CFLAGS" \
 	     -a "$1" != "COB_LIBS" \
 	     -a "$1" != "COB_UNIX_LF" \
@@ -295,8 +296,11 @@ COB_STACKTRACE=0
 export COB_STACKTRACE
 
 
-# different flags checked in the testsuite
+# different variables used in the testsuite
 if test "$GNUCOBOL_TEST_LOCAL" != "1"; then
+	if test "$COB_CC" = ""; then
+		COB_CC="@COB_CC@"
+	fi
 	COB_OBJECT_EXT="@COB_OBJECT_EXT@"
 	COB_EXE_EXT="@COB_EXE_EXT@"
 	COB_MODULE_EXT="@COB_MODULE_EXT@"
@@ -308,6 +312,9 @@ if test "$GNUCOBOL_TEST_LOCAL" != "1"; then
 	COB_HAS_CURSES="@COB_HAS_CURSES@"
 else
 
+	if test "$COB_CC" = ""; then
+	   COB_CC="$($GREP COBC_CC info.out | cut -d: -f2 | cut -b2-)"
+	fi
 	COB_OBJECT_EXT="$($GREP COB_OBJECT_EXT info.out | cut -d: -f2 | cut -b2-)"
 	COB_EXE_EXT="$($GREP COB_EXE_EXT info.out | cut -d: -f2 | cut -b2-)"
 	COB_MODULE_EXT="$($GREP COB_MODULE_EXT info.out | cut -d: -f2 | cut -b2-)"
@@ -379,7 +386,7 @@ rm -rf info.out
 # NIST tests (tests/cobol85) are executed in a separate perl process with a new environment --> export needed
 export COB_HAS_ISAM COB_HAS_XML2 COB_HAS_JSON COB_HAS_CURSES COB_HAS_64_BIT_POINTER
 export COBC COBCRUN COBCRUN_DIRECT RUN_PROG_MANUAL
-export COB_OBJECT_EXT COB_EXE_EXT COB_MODULE_EXT
+export COB_CC COB_OBJECT_EXT COB_EXE_EXT COB_MODULE_EXT
 
 # to ensure that no external DB_HOME is polluted: unset
 DB_HOME="" && export DB_HOME
