@@ -1,4 +1,8 @@
 
+2024-10-02  Simon Sobisch <simonsobisch@gnu.org>
+
+	* atlocal.in, atlocal_win: allow overriding COB_CC during tests
+
 2024-09-09  Simon Sobisch <simonsobisch@gnu.org>
 
 	* run_prog_manual.sh.in:  adding testrunner tmux as alternative
